  - This has been tracked as an action item since Screamer 3,
  - Note that (within ~local~ declarations) basic ~trivia~ and ~iterate~ forms
    have been confirmed to work correctly in nondeterministic contexts after
    this change.
  - LOOP may still not work correctly depending on your implementation, however;
    on SBCL at least this appears to be a separate issue from macrolets.
- Changes to how Screamer works internally to support other extensions
  - ~*nondeterministic-context*~ is now a hash-table when non-NIL, and contains
    some information about the current nondeterministic context. This information
    should not be modified outside of Screamer, but can be read by both users
    and Screamer-internal functionality.
  - Screamer now uses the ~screamer::escape~ and ~screamer::%escape~ symbols
    for internal control flow.
- Changes to some examples in ~doc~
- Fixes for some previously-undiscovered issues in screamer-core leading
  to mutation-mangling of values, potentially including the result lists
  of accumulation forms.
- ~solution~ now forces all variables which are essential to knowing the value
  of the current one, which should hopefully reduce the cases where
  - If a variable is known to have finite solutions, we only force dependencies
    which are also bounded, which should prevent this feature from /adding/ any
    infinite searches.
- Some lifted inference functions reorganize their inputs before generating
  a variable, reducing cases where variables can't be bounded
- Multiple Screamer forms (including ~solution~) have been extended to support
  nondeterminism inside vectors/arrays/hash-tables, rather than just within lists.
- The ~==~ and ~/==~ forms introduced in Screamer 5.0 were moved to screamer/experimental
  until we can better investigate their impact on backward-compatibility for cases
  of ~use-package~ with other packages using these common symbols.